TÍCH HỢP MYSQL VÀ CHẠY THỬ HỆ THỐNG THÀNH CÔNG